@startuml

title __HELPERS's Class Diagram__\n

        class swarm.robot.helpers.Coordinate {
            - heading : double
            - robotId : int
            - topicsSub : HashMap<mqttTopic, String>
            - x : double
            - y : double
            + Coordinate()
            + getHeading()
            + getHeadingRad()
            + getX()
            + getY()
            + handleSubscription()
            + print()
            + publishCoordinate()
            + setCoordinate()
            + setCoordinate()
            + setHeading()
            + setHeadingRad()
            + setX()
            + setY()
            + toString()
            - getNormalizedHeading()
            - round2()
            - subscribe()
        }

        class swarm.robot.helpers.MotionController {
            {static} - maxInterval : int
            {static} - speedFactor : double
            + MotionController()
            {static} + debug()
            {static} + debug()
            {static} + getSlope()
            + goToGoal()
            + goToGoal()
            + isSpeedInRange()
            + move()
            + move()
            + rotate()
            + rotate()
            - PID()
            - delay()
        }

        class swarm.robot.helpers.RobotMQTT {
            # reality : char
            # robotId : int
            - topicsSub : HashMap<mqttTopic, String>
            + RobotMQTT()
            + handleSubscription()
            + robotCreate()
            - subscribe()
        }

  swarm.robot.helpers.Coordinate .up.|> swarm.Interfaces.IMqttHandler
  swarm.robot.helpers.Coordinate o-- swarm.mqtt.RobotMqttClient : robotMqttClient
  swarm.robot.helpers.MotionController o-- swarm.robot.helpers.Coordinate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
